--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/" method="post">
-        <input type="text" name="city" />
+        <input type="text" name="cityName" />
         <input type="submit" value="Submit" />
     </form>    
 </body>
